fixed score divs on mobile

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -28,7 +28,7 @@
 }
 
 .scoreHeader {
-	font-size: 1em;
+	font-size: .8em;
 	padding-right: 10px;
 }
 
